FEAT: add husky support git hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,14 @@
 {
+  "include": ["env.d.ts", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "allowJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*", "./src/*.vue", "./src/*/index.vue"],
+      "#/*": ["./types/*"]
+    }
+  },
   "files": [],
   "references": [
     {
