--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest watch",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -33,13 +36,14 @@
     "cssnano": "^5.1.15",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
     "tailwindcss": "^3.2.7",
-    "typescript": "~4.8.4",
+    "typescript": "~5.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
